Agentforce/force-app/main/default/objects/Sales_Update__c/Sales_Update__c.object-meta.xml
<CustomObject>
    <description>A History of Sales Updates on a lead or opportunity</description>
    <label>Sales Update</label>
    <nameField>
        <displayFormat>SU-{00000}</displayFormat>
        <label>Sales Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>