Agentforce/force-app/main/default/objects/Sales_Update__c/fields/Due__c.field-meta.xml
<CustomField>
    <fullName>Due__c</fullName>
    <label>Due</label>
    <type>Date</type>
</CustomField>