Agentforce/force-app/main/default/objects/Sales_Update__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Next_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>