Agentforce/force-app/main/default/objects/Sales_Update__c/fields/Sales_Update__c.field-meta.xml
<CustomField>
    <fullName>Sales_Update__c</fullName>
    <label>Sales Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>